--- a/WebApplicationAngular/WebApplicationAngular.csproj
+++ b/WebApplicationAngular/WebApplicationAngular.csproj
@@ -17,4 +17,8 @@
 	<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.DotNet.Watcher.Tools" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
